--- a/item-api/slim/composer.json
+++ b/item-api/slim/composer.json
@@ -4,5 +4,13 @@
         "slim/psr7": "^1.6",
         "slim/slim": "^4.11",
         "promphp/prometheus_client_php": "^2.6"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
+    },
+    "autoload": {
+        "classmap": [
+            "src/"
+        ]
     }
 }
