--- a/item-api/slim/composer.json
+++ b/item-api/slim/composer.json
@@ -3,14 +3,20 @@
         "monolog/monolog": "^3.2",
         "slim/psr7": "^1.6",
         "slim/slim": "^4.11",
-        "promphp/prometheus_client_php": "^2.6"
+        "promphp/prometheus_client_php": "^2.6",
+        "mockery/mockery": "^1.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
     },
     "autoload": {
-        "classmap": [
-            "src/"
-        ]
+        "psr-4": {
+            "App\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Test\\": "tests/"
+        }
     }
 }
