--- a/item-api/slim/composer.json
+++ b/item-api/slim/composer.json
@@ -10,13 +10,9 @@
         "phpunit/phpunit": "^9.5"
     },
     "autoload": {
-        "psr-4": {
-            "App\\": "src/"
-        }
+        "psr-4": {"App\\": "src"}
     },
     "autoload-dev": {
-        "psr-4": {
-            "App\\Test\\": "tests/"
-        }
+        "psr-4": {"App\\": "tests"}
     }
 }
