--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,4 +1,5 @@
 proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=STATIC:10m inactive=7d use_temp_path=off;
+limit_req_zone $binary_remote_addr zone=ip:10m rate=5r/s;
 
 upstream next-js_upstream {
   server next-js:3000;
@@ -41,6 +42,7 @@ server {
   }
 
   location / {
+    limit_req zone=ip burst=12 delay=8;
     proxy_pass http://next-js_upstream;
   }
 }
