--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -41,10 +41,10 @@ services:
     ports:
       - 8081:8080
     build:
-      context: ./service-service/app
+      context: ./service-api/app
       dockerfile: dev.Dockerfile
     volumes:
-      - ./service-service/app:/app
+      - ./service-api/app:/app
     networks:
       - service-network
 
@@ -55,7 +55,7 @@ services:
     environment:
       POSTGRES_PASSWORD: example
     volumes:
-      - ./service-service/pg:/var/lib/postgresql/data
+      - ./service-api/pg:/var/lib/postgresql/data
     networks:
       - service-network
 
