--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -20,29 +20,41 @@ services:
 
   # Web app
   next-js:
+    env_file:
+      - .env.dev
     container_name: next-js
     build:
       context: ./next-js
       dockerfile: dev.Dockerfile
-    environment:
-      ENV_VARIABLE: ${ENV_VARIABLE}
-      NEXT_PUBLIC_ENV_VARIABLE: ${NEXT_PUBLIC_ENV_VARIABLE}
     volumes:
       - ./next-js/src:/app/src
       - ./next-js/public:/app/public
     restart: always
     networks:
       - public-network
-      - service-network
 
-  # Service-service
-  service-app:
-    container_name: service-app
+  # Service-api
+  graphql:
+    container_name: graphql
     ports:
       - 8081:8080
     build:
+      context: ./graphql
+      dockerfile: dev.Dockerfile
+    volumes:
+      - ./graphql:/app
+    networks:
+      - public-network
+      - service-network
+
+  # Service-api
+  service-api:
+    container_name: service-api
+    build:
       context: ./service-api/app
       dockerfile: dev.Dockerfile
+    ports:
+      - 8082:8080
     volumes:
       - ./service-api/app:/app
     networks:
