--- a/next-js/package.json
+++ b/next-js/package.json
@@ -9,19 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.14",
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
     "@next/font": "13.0.7",
     "@types/node": "18.11.16",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
-    "axios": "^1.4.0",
     "eslint": "8.30.0",
-    "eslint-config-next": "13.0.7",
-    "next": "13.0.7",
+    "eslint-config-next": "^13.4.1",
+    "graphql": "^16.6.0",
+    "next": "^13.4.1",
     "next-auth": "^4.18.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "swr": "^2.1.5",
     "typescript": "4.9.4"
   },
