graphql into table

--- a/next-js/tsconfig.json
+++ b/next-js/tsconfig.json
@@ -25,7 +25,10 @@
       ],
       "@/styles/*": [
         "styles/*"
-      ]
+      ],
+      "@/generated/*": [
+        "generated/*"
+      ],
     },
     "plugins": [
       {
