--- a/next-js/package.json
+++ b/next-js/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "compile": "graphql-codegen",
+    "watch": "graphql-codegen -w"
   },
   "dependencies": {
     "@apollo/client": "^3.7.14",
@@ -23,13 +25,15 @@
     "next-auth": "^4.18.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swr": "^2.1.5",
-    "typescript": "4.9.4"
+    "swr": "^2.1.5"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^3.3.1",
+    "@graphql-codegen/client-preset": "^3.0.1",
     "autoprefixer": "^10.4.13",
     "concurrently": "^7.6.0",
     "postcss": "^8.4.20",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "typescript": "^5.0.4"
   }
 }
