--- a/graphql/gqlgen.yml
+++ b/graphql/gqlgen.yml
@@ -14,8 +14,8 @@ exec:
 
 # Where should any generated models go?
 model:
-  filename: graph/model/models_gen.go
-  package: gmodel
+  filename: graph/graph_model/models_gen.go
+  package: graph_model
 
 # Where should the resolver implementations go?
 resolver:
