--- a/next-js/package.json
+++ b/next-js/package.json
@@ -17,6 +17,7 @@
     "@types/node": "18.11.16",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@types/react-transition-group": "^4.4.6",
     "eslint": "8.30.0",
     "eslint-config-next": "^13.4.1",
     "graphql": "^16.6.0",
