--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -7,7 +7,7 @@ services:
     container_name: nginx
     build:
       context: ./nginx
-      dockerfile: Dockerfile
+      dockerfile: dev.Dockerfile
     restart: always
     volumes:
       - ./next-js/:/var/www/html/
@@ -21,12 +21,10 @@ services:
 
   # Web app
   next-js:
-    env_file:
-      - .env.dev
     container_name: next-js
     build:
       context: ./next-js
-      dockerfile: dev.Dockerfile
+      dockerfile: docker/dev.Dockerfile
     volumes:
       - ./next-js/src:/app/src
       - ./next-js/public:/app/public
@@ -35,55 +33,54 @@ services:
       - public-network
 
   # Service-api
-  graphql:
-    container_name: graphql
-    build:
-      context: ./graphql
-      dockerfile: dev.Dockerfile
-    restart: always
-    volumes:
-      - ./graphql:/app
-    networks:
-      - public-network
-      - service-network
-    ports:
-      - 8081:8080
+  # graphql:
+  #   container_name: graphql
+  #   build:
+  #     context: ./graphql
+  #     dockerfile: dev.Dockerfile
+  #   restart: always
+  #   volumes:
+  #     - ./graphql:/app
+  #   networks:
+  #     - public-network
+  #     - service-network
+
 
   # Service-api
-  service-api:
-    container_name: service-api
-    build:
-      context: ./service-api/app
-      dockerfile: dev.Dockerfile
-    restart: always
-    volumes:
-      - ./service-api/app:/app
-    networks:
-      - service-network
-    ports:
-      - 8082:8080
+  # service-api:
+  #   container_name: service-api
+  #   build:
+  #     context: ./service-api/app
+  #     dockerfile: dev.Dockerfile
+  #   restart: always
+  #   volumes:
+  #     - ./service-api/app:/app
+  #   networks:
+  #     - service-network
+  #   ports:
+  #     - 8082:8080
 
-  service-db:
-    container_name: service-db
-    image: postgres
-    restart: always
-    environment:
-      POSTGRES_PASSWORD: example
-    volumes:
-      - ./service-api/pg:/var/lib/postgresql/data
-    networks:
-      - service-network
+  # service-db:
+  #   container_name: service-db
+  #   image: postgres
+  #   restart: always
+  #   environment:
+  #     POSTGRES_PASSWORD: example
+  #   volumes:
+  #     - ./service-api/pg:/var/lib/postgresql/data
+  #   networks:
+  #     - service-network
 
-  adminer:
-    image: adminer
-    restart: always
-    ports:
-      - 8080:8080
-    networks:
-      - service-network
+  # adminer:
+  #   image: adminer
+  #   restart: always
+  #   ports:
+  #     - 8080:8080
+  #   networks:
+  #     - service-network
 
 networks:
   public-network:
-  service-network:
+  # service-network:
 
 
