--- a/next-js/tsconfig.json
+++ b/next-js/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -20,15 +16,9 @@
     "incremental": true,
     "baseUrl": "./src",
     "paths": {
-      "@/components/*": [
-        "components/*"
-      ],
-      "@/styles/*": [
-        "styles/*"
-      ],
-      "@/generated/*": [
-        "generated/*"
-      ],
+      "@/features/*": ["features/*"],
+      "@/styles/*": ["styles/*"],
+      "@/generated/*": ["generated/*"]
     },
     "plugins": [
       {
@@ -38,11 +28,10 @@
   },
   "include": [
     "next-env.d.ts",
+    "process.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
