--- a/nginx/next-js.conf
+++ b/nginx/next-js.conf
@@ -8,7 +8,7 @@ upstream next-js_upstream {
 server {
   listen 80 default_server;
 
-  server_name app.localhost;
+  server_name app.invman.nl;
 
   server_tokens off;
 
