certificate lets go

--- a/nginx/next-js.conf
+++ b/nginx/next-js.conf
@@ -6,7 +6,19 @@ upstream next-js_upstream {
 }
 
 server {
-  listen 80 default_server;
+    listen 80 default_server;
+    listen [::]:80;
+
+    server_name app.invman.nl default_server;
+
+    return 302 https://$server_name$request_uri;
+}
+
+server {
+  listen 443 ssl;
+  listen [::]:443 ssl;
+  ssl_certificate /etc/ssl/invman.crt
+  ssl_certificate_key /etc/ssl/invman.key
 
   server_name app.invman.nl;
 
