--- a/nginx/next-js.conf
+++ b/nginx/next-js.conf
@@ -17,8 +17,8 @@ server {
 server {
   listen 443 ssl;
   listen [::]:443 ssl;
-  ssl_certificate /etc/ssl/invman.crt
-  ssl_certificate_key /etc/ssl/invman.key
+  ssl_certificate /etc/ssl/invman.crt;
+  ssl_certificate_key /etc/ssl/invman.key;
 
   server_name app.invman.nl;
 
