--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -122,6 +122,14 @@ services:
     networks:
       - service-network
 
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
+    networks:
+      - auth-network
+
 networks:
   public-network:
   auth-network:
