--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -55,8 +55,7 @@ services:
       - public-network
       - service-network
     depends_on:
-      service-postgres:
-        condition: service_healthy
+      - service-postgres
     environment:
       - TOKEN_SECRET=${INVMAN_ACCESS_TOKEN_SECRET}
       - INVMAN_APP_URL=${INVMAN_APP_URL}
@@ -74,10 +73,8 @@ services:
     volumes:
       - ./services/auth/app:/app
     depends_on:
-      auth-redis:
-        condition: service_started
-      auth-postgres:
-        condition: service_healthy
+      - auth-redis
+      - auth-postgres
     networks:
       - public-network
       - auth-network
@@ -113,11 +110,11 @@ services:
       - ./services/auth/pg/data:/var/lib/postgresql/data
     networks:
       - auth-network
-    healthcheck:
-      test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres -d ${AUTH_POSTGRES_PASSWORD}'"]
-      interval: 10s
-      timeout: 3s
-      retries: 3
+    # healthcheck:
+    #   test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres -d ${AUTH_POSTGRES_PASSWORD}'"]
+    #   interval: 10s
+    #   timeout: 3s
+    #   retries: 3
 
   service-postgres:
     container_name: service-postgres
@@ -128,11 +125,11 @@ services:
       - ./services/service/pg/data:/var/lib/postgresql/data
     networks:
       - service-network
-    healthcheck:
-      test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres -d ${SERVICE_POSTGRES_PASSWORD}'"]
-      interval: 10s
-      timeout: 3s
-      retries: 3
+    # healthcheck:
+    #   test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres -d ${SERVICE_POSTGRES_PASSWORD}'"]
+    #   interval: 10s
+    #   timeout: 10s
+    #   retries: 3
 
 networks:
   public-network:
