--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -10,10 +10,9 @@ services:
       - ./ui/:/var/www/html/
       - ./logs/nginx:/var/log/nginx/
     depends_on:
-      next-js:
-        condition: service_started
-      graphql:
-        condition: service_started
+      - next-js
+      - auth-app
+      - graphql
     networks:
       - public-network
     ports:
@@ -36,11 +35,6 @@ services:
       - ./next-js/public:/app/public
     networks:
       - public-network
-    depends_on:
-      auth-app:
-        condition: service_started
-      graphql:
-        condition: service_started
     environment:
       - NEXTAUTH_URL=${INVMAN_APP_URL}/api/auth
       - NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
@@ -48,6 +42,7 @@ services:
       - NEXTAUTH_INVMAN_CLIENT_SECRET=${INVMAN_AUTH_CLIENT_SECRET}
       - INVMAN_AUTH_URL=${INVMAN_AUTH_URL}
       - NEXT_PUBLIC_INVMAN_API_URL=${INVMAN_API_URL}
+      - NEXT_TELEMETRY_DISABLED=1
 
   graphql:
     container_name: graphql
@@ -60,8 +55,7 @@ services:
       - public-network
       - service-network
     depends_on:
-      service-postgres:
-        condition: service_healthy
+      - service-postgres
     environment:
       - TOKEN_SECRET=${INVMAN_ACCESS_TOKEN_SECRET}
       - INVMAN_APP_URL=${INVMAN_APP_URL}
@@ -79,10 +73,8 @@ services:
     volumes:
       - ./services/auth/app:/app
     depends_on:
-      auth-redis:
-        condition: service_started
-      auth-postgres:
-        condition: service_healthy
+      - auth-redis
+      - auth-postgres
     networks:
       - public-network
       - auth-network
@@ -118,11 +110,11 @@ services:
       - ./services/auth/pg/data:/var/lib/postgresql/data
     networks:
       - auth-network
-    healthcheck:
-      test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres -d ${AUTH_POSTGRES_PASSWORD}'"]
-      interval: 10s
-      timeout: 3s
-      retries: 3
+    # healthcheck:
+    #   test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres -d ${AUTH_POSTGRES_PASSWORD}'"]
+    #   interval: 10s
+    #   timeout: 3s
+    #   retries: 3
 
   service-postgres:
     container_name: service-postgres
@@ -133,11 +125,11 @@ services:
       - ./services/service/pg/data:/var/lib/postgresql/data
     networks:
       - service-network
-    healthcheck:
-      test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres -d ${SERVICE_POSTGRES_PASSWORD}'"]
-      interval: 10s
-      timeout: 3s
-      retries: 3
+    # healthcheck:
+    #   test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres -d ${SERVICE_POSTGRES_PASSWORD}'"]
+    #   interval: 10s
+    #   timeout: 3s
+    #   retries: 3
 
   adminer:
     image: adminer
