--- a/nginx/templates/invman.dev.conf.template
+++ b/nginx/templates/invman.dev.conf.template
@@ -2,6 +2,15 @@ server {
     listen 80 default_server;
     listen [::]:80;
 
+    server_name localhost;
+
+    return 302 http://app.$server_name$request_uri;
+}
+
+server {
+    listen 80;
+    listen [::]:80;
+
     server_name ${NGINX_INVMAN_APP_HOST};
 
     location / {
