--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -114,7 +114,7 @@ services:
 
   auth-postgres:
     container_name: auth-postgres
-    image: postgres
+    image: postgres:alpine
     environment:
       POSTGRES_PASSWORD: ${AUTH_POSTGRES_PASSWORD}
     volumes:
@@ -122,14 +122,14 @@ services:
     networks:
       - auth-network
     healthcheck:
-      test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres -d ${AUTH_POSTGRES_PASSWORD}'"]
+      test: ["CMD-SHELL", "sh -c 'pg_isready -U ${AUTH_POSTGRES_USER} -d ${AUTH_POSTGRES_PASSWORD}'"]
       interval: 10s
       timeout: 3s
       retries: 3
 
   service-postgres:
     container_name: service-postgres
-    image: postgres
+    image: postgres:alpine
     environment:
       POSTGRES_PASSWORD: ${SERVICE_POSTGRES_PASSWORD}
     volumes:
@@ -137,7 +137,7 @@ services:
     networks:
       - service-network
     healthcheck:
-      test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres -d ${SERVICE_POSTGRES_PASSWORD}'"]
+      test: ["CMD-SHELL", "sh -c 'pg_isready -U ${SERVICE_POSTGRES_USER} -d ${SERVICE_POSTGRES_PASSWORD}'"]
       interval: 10s
       timeout: 3s
       retries: 3
