--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -105,36 +105,36 @@ services:
     image: "redis:alpine"
     command: redis-server --requirepass ${AUTH_REDIS_PASSWORD}
     volumes:
-      - ./services/auth/redis/data:/var/lib/redis
+      - ./auth/redis/data:/var/lib/redis
     networks:
       - auth-network
 
   auth-postgres:
     container_name: auth-postgres
-    image: postgres
+    image: postgres:alpine
     environment:
       POSTGRES_PASSWORD: ${AUTH_POSTGRES_PASSWORD}
     volumes:
-      - ./services/auth/pg/data:/var/lib/postgresql/data
+      - ./auth/pg/data:/var/lib/postgresql/data
     networks:
       - auth-network
     healthcheck:
-      test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres -d ${AUTH_POSTGRES_PASSWORD}'"]
+      test: ["CMD-SHELL", "sh -c 'pg_isready -U ${AUTH_POSTGRES_USER} -d ${AUTH_POSTGRES_PASSWORD}'"]
       interval: 10s
       timeout: 3s
       retries: 3
 
   service-postgres:
     container_name: service-postgres
-    image: postgres
+    image: postgres:alpine
     environment:
       POSTGRES_PASSWORD: ${SERVICE_POSTGRES_PASSWORD}
     volumes:
-      - ./services/service/pg/data:/var/lib/postgresql/data
+      - ./service/pg/data:/var/lib/postgresql/data
     networks:
       - service-network
     healthcheck:
-      test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres -d ${SERVICE_POSTGRES_PASSWORD}'"]
+      test: ["CMD-SHELL", "sh -c 'pg_isready -U ${SERVICE_POSTGRES_USER} -d ${SERVICE_POSTGRES_PASSWORD}'"]
       interval: 10s
       timeout: 3s
       retries: 3
